# RIAS-OS

./: Cargo.toml  Dockerfile.build  build.rs  keep_stack_sizes.x  qemu.ps1  run-in-docker.ps1  stack-sizes-debug.csv  stack-sizes-release.csv  stack-sizes.csv  stack-sizes.ps1
.cargo/: config
src/: lib.rs  main.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/arch/: mod.rs
src/arch/rias_x86_64/: boot.rs  instructions.rs  shutdown.rs
src/arch/rias_x86_64/boot/: gdt.rs  idt.rs  pic.rs
src/config/: mod.rs
src/drivers/: serial.rs  vga.rs
src/memory/: frame_allocator.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  idt_setup.rs  panics_correctly.rs  stack_overflow.rs
