[package]
name = "rias_os"
version = "0.1.0"
authors = ["L3tum <9307432+L3tum@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "^0.8", features = ["map_physical_memory"]}
volatile = "^0.2"
x86 = "^0.27"
spin = "^0.5"
x86_64 = "^0.7"
uart_16550 = "^0.2"
pic8259_simple = "^0.1"
pc-keyboard = "^0.3"
linked_list_allocator = "^0.6"

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]

[package.metadata.cargo-sysroot]
target = "targets/x86_64.json" # This is relative to Cargo.toml

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300          # (in seconds)
test-success-exit-code = 33         # (0x10 << 1) | 1

[package.metadata.bootloader]
# The address at which the kernel stack is placed. If not provided, the bootloader
# dynamically searches for a location.
kernel-stack-address = "0xFFFFFF8000000000"

# The size of the kernel stack, given in number of 4KiB pages. Defaults to 512.
kernel-stack-size = 32

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "panics_correctly"
harness = false